--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Copyright (c) 2008, janus_wel<janus.wel.3@gmailcom>
+Copyright (c) 2008-2009, janus_wel<janus.wel.3@gmailcom>
 
 software setting files on various platform.
 NOT RESPONSIBLE for damage to your system, software and so on, by using this settings.
