--- a/README
+++ b/README
@@ -1,4 +1,9 @@
 Copyright (c) 2008-2009, janus_wel<janus.wel.3@gmailcom>
 
-software setting files on various platform.
-NOT RESPONSIBLE for damage to your system, software and so on, by using this settings.
+This repository is a set of software setting files on various platform.
+
+I am NOT RESPONSIBLE for damages to your system, software and so on, by using this settings.  Use at your own risk.
+
+Licenses of some files are specified with "LICENSE" file that be placed the top of each directory.  For now, files under "vimfiles" directory are distributed with "New BSD License" - see http://github.com/januswel/dotfiles/vimfiles/LICENSE .
+
+Others are placed public domain (these are not copyrighted work) because I think these are just settings and the all or part of these may be copied by anyone.  ...And vice versa.
